--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-TOKEN=NTQ2MTQ2NDY5MTk1OTM5ODQx.D1oDrA.cVbzcG5ogvQuMadv2mWYXodoMJs
+TOKEN=NTQ2NTQwNTc4NTY1OTE0NjI0.XM-gqA.GTWTrmXP5-HuHFceC1UXaAEmYSM
 PORT=3000
