--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-TOKEN=NTQ2NTQwNTc4NTY1OTE0NjI0.XM-gqA.GTWTrmXP5-HuHFceC1UXaAEmYSM
+TOKEN=NTQ2MTQ2NDY5MTk1OTM5ODQx.XQgx2w.4USWQtYjIsQ_XbM-Pm9yzQXBdQ0
 PORT=3000
